<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adp_foods"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/bg_setting_main">

    <ImageView
        android:id="@+id/imgfoodadapter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rerise" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Name"
        android:textColor="@color/Text"
        app:layout_constraintStart_toEndOf="@+id/imgfoodadapter"
        app:layout_constraintTop_toTopOf="@+id/imgfoodadapter" />

    <TextView
        android:id="@+id/txt_name_adp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="txtName"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="@id/textView6"
        app:layout_constraintStart_toEndOf="@id/textView6"
        app:layout_constraintTop_toTopOf="@id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Price"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/imgfoodadapter"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/txt_price_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="txtPrice"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/txt_Cataloge_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="txtCatalog"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="@id/textView11"
        app:layout_constraintStart_toEndOf="@id/textView11"
        app:layout_constraintTop_toTopOf="@id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Catalog"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="@+id/imgfoodadapter"
        app:layout_constraintStart_toEndOf="@+id/imgfoodadapter" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_setting_food"
        android:text="@string/Delete"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="@+id/imgfoodadapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgfoodadapter" />

</androidx.constraintlayout.widget.ConstraintLayout>