<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_setting_main"
    tools:context=".Fragment.Food_fragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_food_fragmet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/rerise" />

    <TextView
        android:id="@+id/textfragement1"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_food_fragmet"
        android:layout_alignStart="@+id/img_food_fragmet"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:gravity="left"
        android:text="@string/ID"
        android:textColor="@color/Text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textfragement3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textfragement1"
        android:layout_alignStart="@+id/textfragement1"
        android:layout_alignEnd="@+id/textfragement1"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="0dp"
        android:gravity="center|left"
        android:text="@string/Price"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textfragement4"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtFragment_cost"
        android:layout_alignBottom="@+id/txtFragment_cost"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/txtFragment_cost"
        android:gravity="center|left"
        android:text="@string/Numberic"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textfragement5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textfragement4"
        android:layout_alignStart="@+id/textfragement1"
        android:layout_alignEnd="@+id/textfragement1"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="0dp"
        android:gravity="center|left"
        android:text="@string/Catalog"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtFragment_cost"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textfragement3"
        android:layout_alignBottom="@+id/textfragement3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textfragement3"
        android:text="TextView"
        android:textColor="@color/Text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtFragment_numberic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textfragement4"
        android:layout_alignBottom="@+id/textfragement4"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textfragement4"
        android:text="TextView"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtFragment_Catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textfragement5"
        android:layout_alignBottom="@+id/textfragement5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textfragement5"
        android:text="TextView"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtFragment_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textfragement1"
        android:layout_alignBottom="@+id/textfragement1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textfragement1"
        android:text="TextView"
        android:textColor="@color/Text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtFragment_name"
        android:layout_width="289dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/Text"
        android:textSize="20dp" />

</RelativeLayout>